--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 			<a-marker type="pattern" url="data/markers\Nutty.patt" markercontroller="name : Nutty"></a-marker>
 			<a-marker type="pattern" url="data/markers\NuttyCardboard.patt" markercontroller="name : NuttyCardboard"></a-marker>
 			<a-marker type="pattern" url="data/markers\pattern-14068770302247464_460_0.patt" markercontroller="name : pattern-14068770302247464_460_0"></a-marker>
+			<a-marker type="pattern" url="data/markers\pattern-pngtree.patt" markercontroller="name : pattern-pngtree"></a-marker>
 
       <a-entity camera cameratransform></a-entity>
     </a-scene>
